# open-fem-agent

./: .cursorrules  .gitignore  E2E_POSTMORTEMS.md  PLAN.md  README.md  STRESS_TESTS.md  check_solver_updates.sh  clear_history.sh  dcb_peridynamics_generator.py  fsi_beam_generator.py  fsi_channel_flex_wall.py  lame_cylinder.py  mcp_config.json  pyproject.toml
.claude/: settings.json.example
.github/workflows/: knowledge-freshness.yml
benchmarks/: convergence_study.py  generate_paper_figures.py  run_all_benchmarks.py
data/: dealii_knowledge.py  fourc_knowledge.py  kratos_knowledge.py  solver_recommendations.yaml
data/fingerprints/: _meta.json  dealii.json  dune.json  fenics.json  fourc.json  kratos.json  ngsolve.json  skfem.json
scripts/: fingerprint_solvers.py
scripts/baseline_study/: README.md  analyze_results.py  prompts.json  results_template.json  test_with_synthetic_data.py
src/: server.py
src/core/: autodiscovery.py  backend.py  field_transfer.py  knowledge_aggregator.py  post_processing.py  precice_config.py  quality_checks.py  registry.py  session_analyzer.py  session_journal.py  smoke_tests.py
src/reporting/: __init__.py  vtu_plotting.py
src/tools/: benchmark.py  consolidated.py  coupling.py  deep_knowledge.py  developer.py  discovery.py  examples_search.py  knowledge.py  (+5 more)
tests/: conftest.py  test_autodiscovery.py  test_backends.py  test_coupling.py  test_e2e.py  test_freshness.py  test_knowledge_aggregator.py  test_physics_coverage.py  test_session_analyzer.py  test_session_journal.py  test_session_journal_stress.py  test_smoke_tests.py
(+142 files in other folders)
